# tagdb

./: CMakeLists.txt  README.md
cmake/: FindVSQLitePP.cmake
data/: tagdb.sql
src/: main.cpp
